--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.19",
     "lucide-react": "^0.511.0",
     "negotiator": "^1.0.0",
     "next": "15.3.2",
